@@ -1,3 +1,7 @@
+2019-08-21  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* c-c++-common/dump-ada-spec-15.c: New test.
+
 2019-08-21  Christophe Lyon  <christophe.lyon@linaro.org>
 
 	* gcc.target/arm/cmse/cmse-9.c: Add quotes to expected
