@@ -1,3 +1,8 @@
+2019-08-21  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* c-ada-spec.c (dump_ada_function_declaration): Be prepared for broken
+	function declarations where arguments are missing.  Rename variables.
+
 2019-08-15  Richard Biener  <rguenther@suse.de>
 
 	* c-common.c (c_stddef_cpp_builtins): When the GIMPLE FE is
